Bug 804042 - make sure reply-to-self works case insensitively. r=benc DONTBUILD CLOSED TREE

--HG--
extra : amend_source : ee5276c758e420d8b915984d2cc8d693dfc79763